# EECS373

MobileRobotics/PS6_baxter_variations/: README.md
MobileRobotics/PS6_baxter_variations/baxter_variations/: CMakeLists.txt  package.xml
MobileRobotics/PS6_baxter_variations/baxter_variations_2/: CMakeLists.txt  package.xml
MobileRobotics/mobile_PS2/: README.md
MobileRobotics/mobile_PS3_wall_follow/src/: wall_follower.cpp  wall_follower_ANGLE.cpp
MobileRobotics/mobile_PS4_traj_gen/: README.md
MobileRobotics/mobile_PS4_traj_gen_PS5_steering/PS5_changes/: README.md
MobileRobotics/mobile_PS4_traj_gen_PS5_steering/PS5_changes/mobot_pub_des_state2/: CMakeLists.txt  package.xml
MobileRobotics/mobile_PS4_traj_gen_PS5_steering/PS5_changes/mobot_pub_des_state2/src/: pub_des_state2.cpp  pub_des_state2.h  pub_des_state_main2.cpp  pub_des_state_path_client2.cpp
MobileRobotics/my_stdr_control/: CMakeLists.txt  README.md
ModernRobotProgramming/problem_set_2/: CMakeLists.txt  package.xml
ModernRobotProgramming/problem_set_2/launch/: problem_set_2.launch
ModernRobotProgramming/problem_set_2/src/: minimal_simulator.cpp  sin_commander_client.cpp
ModernRobotProgramming/problem_set_3/: CMakeLists.txt  package.xml
ModernRobotProgramming/problem_set_3/action/: sinCommander.action
ModernRobotProgramming/problem_set_3/include/problem_set_3/: sin_commander_server.h
ModernRobotProgramming/problem_set_3/src/: sin_commander_action_server.cpp
ModernRobotProgramming/problem_set_4/: CMakeLists.txt  README.md
ModernRobotProgramming/problem_set_5/: CMakeLists.txt
ModernRobotProgramming/problem_set_5/src/: irb120_reactive_task_commander_with_coords.cpp
ModernRobotProgramming/problem_set_6/: CMakeLists.txt
ModernRobotProgramming/problem_set_6/src/: ps6.cpp
ModernRobotProgramming/problem_set_7/: example_block_grabber.cpp
ModernRobotProgramming/problem_set_8_9/box_inspector/include/box_inspector/: box_inspector.h
ModernRobotProgramming/problem_set_8_9/box_inspector/src/: box_inspector.cpp
ModernRobotProgramming/problem_set_8_9/shipment_filler/: CMakeLists.txt
ModernRobotProgramming/problem_set_8_9/shipment_filler/src/: fill_order.cpp  unload_box.cpp
irb140/cartesian_motion_commander/src/: example_block_grabber.cpp
mobile_PS2/lidar_alarm/src/: lidar_alarm.cpp
my_stdr_control/: package.xml
my_stdr_control/src/: my_stdr_open_loop_commander.cpp
problem_set_1/: CMakeLists.txt  package.xml
problem_set_1/src/: sin_commander.cpp
problem_set_2/: README.md
problem_set_2/src/: minimal_controller.cpp  sin_commander_service.cpp
problem_set_2/srv/: FreqAmpService.srv
problem_set_3/: README.md
problem_set_3/src/: sin_commander_action_client.cpp  sin_commander_action_server_lib.cpp
problem_set_4/: package.xml
problem_set_4/src/: irb120_traj_sender.cpp
problem_set_5/: README.md  package.xml
problem_set_5/src/: irb120_reactive_task_commander_with_coords.cpp
problem_set_6/: README.md  package.xml
problem_set_6/src/: ps6.cpp
problem_set_7/: example_block_grabber.cpp  find_block.cpp
problem_set_8/shipment_filler/src/: unload_box.cpp
problem_set_9/shipment_filler/: CMakeLists.txt
problem_set_9/shipment_filler/src/: fill_order.cpp
problem_set_9/xform_utils/: CMakeLists.txt
